fix(wanderlog): minor fixes to collapsed planner itinerary subheading

--- a/styles/wanderlog/catppuccin.user.less
+++ b/styles/wanderlog/catppuccin.user.less
@@ -1529,6 +1529,16 @@
       color: @text;
       &__subheading {
         color: @subtext1;
+
+        &Container {
+          svg[data-icon="bed"] {
+            filter: @subtext0-filter !important;
+          }
+          &::after {
+            // ellipsis when itinerary section is collapsed
+            background-color: @base;
+          }
+        }
       }
     }
     .HoverTextInput__editableContainer {
